# transcoder

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy-local.sh  test.md
migrations/: 001_init.sql  003_callback_retry.sql
src/: auth.rs  autoscaler.rs  callback.rs  cancellation.rs  config.rs  error.rs  ffmpeg.rs  main.rs  middleware.rs  poller.rs  progress.rs  queue.rs  r2.rs  retry.rs  settings.rs  system.rs  ui.rs  worker.rs  worker_tracker.rs
src/api/: models.rs  routes.rs
src/db/: models.rs  repository.rs
templates/: _jobs_table.html  _jobs_table_full.html  _stats.html  _system.html  _workers.html  api_docs.html  base.html  callback_tester.html  dashboard.html  job_detail.html  jobs.html  login.html  settings.html  submit.html  workers.html
