[package]
name = "video-transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "trace", "cors", "set-header",
    "compression-gzip", "limit", "request-id", "util",
] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }

# AWS S3 (R2-compatible)
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
rand = "0.8"
futures = "0.3"
bytes = "1"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
sysinfo = "0.38.1"

[[bin]]
name = "transcoder"
path = "src/main.rs"
